# lox-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  error
scripts/: test1.lox  test2.lox  test3.lox  test4.lox  test5.lox  test6.lox
src/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  lox.cpp  lox.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  util_types.hpp
src/interpreter/: CMakeLists.txt  Environment.hpp  Interpreter.cpp  Interpreter.hpp  ScopedEnvironment.hpp  interpreter.cpp  interpreter.hpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  parser.cpp  parser.hpp  statements.hpp
src/scanner/: CMakeLists.txt  Scanner.cpp  Scanner.hpp  Token.hpp  scanner.cpp  scanner.hpp
tests/: lox_test.py  run_scripts.py  tests.py
